[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/CharacterSheetSubpages/Summary/StatLine.gd" type="Script" id=1]

[node name="StatLine" type="HBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 48.0
margin_bottom = -260.0
rect_min_size = Vector2( 0, 40 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 90.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 40 )

[node name="Stat" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -20.0
margin_right = 50.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 40 )
text = "Placeholder"
align = 1
valign = 1

[node name="BaseVal" type="LineEdit" parent="."]
margin_left = 94.0
margin_right = 184.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 40 )
size_flags_horizontal = 3
text = "0"
align = 2

[node name="MiscBonus" type="LineEdit" parent="."]
margin_left = 188.0
margin_right = 278.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 40 )
size_flags_horizontal = 3
text = "0"
align = 2

[node name="TotalStat" type="LineEdit" parent="."]
margin_left = 282.0
margin_right = 372.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 40 )
size_flags_horizontal = 3
align = 2
editable = false

[node name="AbilityBonus" type="LineEdit" parent="."]
margin_left = 376.0
margin_right = 466.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 40 )
size_flags_horizontal = 3
align = 2
editable = false

[node name="SavingThrow" type="CheckButton" parent="."]
margin_left = 470.0
margin_right = 560.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 40 )

[connection signal="text_changed" from="BaseVal" to="." method="_on_BaseVal_text_changed"]
[connection signal="text_changed" from="MiscBonus" to="." method="_on_MiscBonus_text_changed"]
